--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,7 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
+    <%- include('./partials/header') %>
     <h1 class="title">mira la pantalla</h1>
 <div class="keyboard">
   <ul class="row row-0">
